Fix more layout issues

--- a/themes/area51/assets/scss/_main-container.scss
+++ b/themes/area51/assets/scss/_main-container.scss
@@ -27,11 +27,16 @@
     main {
         @include media-breakpoint-up(md) {
             padding-top: 4rem;
-            padding-left: 0.5rem !important;
-        }
+            //padding-left: 0.5rem !important;
+          }
 
 /*
         padding-bottom: 2rem;
 */
+      @media (min-width: 768px) {
+        padding-left: calc(0.5em + 25%) !important;
+        max-width: 100% !important;
+        z-index: 1;
+      }
     }
 }
