--- a/themes/area51/assets/scss/_sidebar-tree.scss
+++ b/themes/area51/assets/scss/_sidebar-tree.scss
@@ -103,11 +103,13 @@
         color: $td-sidebar-tree-root-color;
         border-bottom: 1px $td-sidebar-tree-root-color solid;
         margin-bottom: 1rem;
+        padding-left: 0.5em !important;
     }
 }
 
 .td-sidebar {
     @include media-breakpoint-up(md) {
+        position: fixed;
         padding-top: 4rem;
         background-color: $td-sidebar-bg-color;
         padding-right: 1rem;
@@ -137,7 +139,9 @@
                 position: sticky;
                 top: 3rem;
                 z-index: 10;
-                height: calc(100vh - 6rem);
+                height: calc(100vh - 15rem);
+                overflow-y: auto;
+                overflow-x: hidden;
             }
         }
 
